MEC Production/MEC Production/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Article__c</fullName>
        <externalId>true</externalId>
        <label>Article</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Stock__c</fullName>
        <label>Available On Hand Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Unit__c</fullName>
        <label>Base Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Weight__c</fullName>
        <label>Gross Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Status_Description__c</fullName>
        <formula>IF( TEXT(Item_Status__c) = &apos;A&apos;,&apos;Active&apos;,
IF(TEXT(Item_Status__c) = &apos;C&apos;,&apos;End Of Life&apos;,
IF(TEXT(Item_Status__c) = &apos;B&apos;,&apos;Non Active&apos;,&apos;&apos;
)
)
)</formula>
        <label>Item Status Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Status__c</fullName>
        <label>Item Status</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Latest_Stock__c</fullName>
        <label>Latest Stock</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Type__c</fullName>
        <label>Manufacturing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchandise_Category__c</fullName>
        <label>Merchandise Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Weight__c</fullName>
        <label>Net Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PH__c</fullName>
        <description>Product Hierarchy Level 2</description>
        <formula>MID( Product_Hierarchy__c , 1, 3)</formula>
        <label>PH`</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MDA&apos;,&apos;Mobile&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MCA&apos;,&apos;TV&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MCB&apos;,&apos;HV&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MCC&apos;,&apos;HIFI&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MCD&apos;,&apos;PIC&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MCE&apos;,&apos;PVC&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MAC&apos;,&apos;Ace IT&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MCF&apos;,&apos;PA&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MAD&apos;,&apos;Ace P&amp;S&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MAE&apos;,&apos;Ace Tab&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MAG&apos;,&apos;AceGaming&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MAT&apos;,&apos;Ace Mobile&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MCG&apos;,&apos;ME&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MCH&apos;,&apos;BNP&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MIA&apos;,&apos;IT&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MRT&apos;,&apos;Mobile&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MSM&apos;,&apos;Sony Mobiles&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MSS&apos;,&apos;SONY&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MRI&apos;,&apos;Camera&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MRG&apos;,&apos;Gaming&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MRL&apos;,&apos;AV&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MRP&apos;,&apos;Portable Media&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MPA&apos;,&apos;PSX&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MCI&apos;,&apos;RME&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MCJ&apos;,&apos;Secu&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MLA&apos;,&apos;HAP&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MQA&apos;,&apos;TV&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MRF&apos;,&apos;NetworkDevises&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MRO&apos;,&apos;CarElectronics&apos;, 
IF( MID( Product_Hierarchy__c , 1, 3) =&apos;MRV&apos;,&apos;Projector&apos;, 
&apos;Others&apos; 
)
)
)
) 
)
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Detail__c</fullName>
        <formula>Product_Hierarchy2__r.Description__c</formula>
        <label>Product Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Hierarchy2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchandise Hierarchy</label>
        <referenceTo>Product_Hierarchy__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Hierarchy__c</fullName>
        <label>Product Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Website__c</fullName>
        <label>Product Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_In_Qty__c</fullName>
        <label>Sell In Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Out_Qty__c</fullName>
        <label>Sell Out Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_in_Channel__c</fullName>
        <label>Stock in Channel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trans_Group__c</fullName>
        <label>Trans Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Dimension__c</fullName>
        <label>Unit of Dimension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weighted_Unit__c</fullName>
        <label>Weighted Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Youtube_demo_Link__c</fullName>
        <label>Youtube demo Link</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Merchandise_Category__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Detail__c</columns>
        <columns>Product_Hierarchy__c</columns>
        <columns>Item_Status_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>